tests/sksl/errors/ReturnMissingValue.glsl
### Compilation failed:

error: 1: expected function to return 'int'
1 error
